# networking-syllabus

./: Diagrama-redes-link.txt
project/: README.md  docker-compose.yaml
project/app/backend/: Dockerfile  main.py  pyproject.toml
project/app/nginx/: Dockerfile  nginx.conf
project/app/nginx/frontend/: app.js  index.html
project/app/nginx/ssl/: selfsigned.crt  selfsigned.key
